Fixed an issue with shift clicking

--- a/UI/Web/src/app/cards/bulk-operations/bulk-operations.component.scss
+++ b/UI/Web/src/app/cards/bulk-operations/bulk-operations.component.scss
@@ -5,7 +5,7 @@
 
 
     border: 2px solid $primary-color;
-    background-color: $dark-form-background;
+    background-color: $dark-form-background-no-opacity;
     border-radius: 5px;
     color: white;
 }
